--- a/API/package.json
+++ b/API/package.json
@@ -3,7 +3,8 @@
     "@prisma/client": "^6.16.1",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "qrcode": "^1.5.4"
   },
   "devDependencies": {
     "prisma": "^6.16.1"
