mudando a url para o novo database

--- a/API/.env
+++ b/API/.env
@@ -10,6 +10,6 @@
 
 # Arquivo: .env
 
-DATABASE_URL="postgresql://maintech:zeFks1aw47XAb47rJKiJ9sgUHoBh6yKL@dpg-d3ap5affte5s73dhftog-a.oregon-postgres.render.com/maintech"
+DATABASE_URL="postgresql://maintechroot:e5SIZX0SNjbg8gb8afEPvzDS2w34HlKQ@dpg-d3vl3q0dl3ps73ft7e50-a.oregon-postgres.render.com/maintech_liv1"
 
 
