--- a/API/.env
+++ b/API/.env
@@ -12,4 +12,4 @@
 
 DATABASE_URL="postgresql://maintechroot:e5SIZX0SNjbg8gb8afEPvzDS2w34HlKQ@dpg-d3vl3q0dl3ps73ft7e50-a.oregon-postgres.render.com/maintech_liv1"
 
-
+JWT_SECRET=SGNldE5pYW0=
