--- a/API/package.json
+++ b/API/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
     "@prisma/client": "^6.16.3",
+    "@sendgrid/mail": "^8.1.6",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.10",
