atualizando a conexão com o database

--- a/API/.env
+++ b/API/.env
@@ -10,6 +10,6 @@
 
 # Arquivo: .env
 
-DATABASE_URL="postgresql://maintechroot:e5SIZX0SNjbg8gb8afEPvzDS2w34HlKQ@dpg-d3vl3q0dl3ps73ft7e50-a.oregon-postgres.render.com/maintech_liv1"
+DATABASE_URL="postgresql://maintechroot:XOQRyYHfupF5HbzdTRvhjO84OSC7A6a4@dpg-d4jfhgumcj7s73bh33u0-a.oregon-postgres.render.com/maintech_yhkk"
 
 JWT_SECRET=SGNldE5pYW0=
